<resources>
    <string name="app_name">Student Score</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="login">Iniciar Sesión</string>
    <string name="don_t_have_an_account_sign_in">¿No tienes una cuenta? Registrarse</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="signed">Iniciar sesión</string>
    <string name="already_have_an_account_login">¿Ya tienes una cuenta? Iniciar Sesión</string>
    <string name="sign_with_google">Iniciar Sesión con Google</string>
    <string name="default_web_client_id">363607756514-5j8se753h65ohqi22q05bn2a6vg13p7e.apps.googleusercontent.com</string>
    <string name="register_student">Registrar un Estudiante</string>
    <string name="select_an_option">Selecciona una opción:</string>
    <string name="register_student_score">Resgistrar Notas de Estudiantes</string>
    <string name="registered_students">Estudiantes Registrados</string>
    <string name="delete_and_update_student">Eliminar y Actualizar Estudiante</string>
    <string name="delete_and_update_score">Eliminar y Actualizar Notas</string>
    <string name="student_data">Ingrese los datos del estudiante:</string>
    <string name="name">Nombres</string>
    <string name="register">Registrar</string>
    <string name="last_name">Apellidos</string>
    <string name="age">Edad</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="subject">Materia</string>
    <string name="grade">Grado</string>
    <string name="grade_subject">Grado - Materia</string>
    <string name="final_score">Nota Final:</string>
    <string name="score_ejem">Nota Final (0-10)</string>
    <string name="back">Volver</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="save">Guardar</string>
    <string name="student_score">Registro de notas:</string>
    <string name="registered_scores">Estudiantes Registrados</string>
    <string name="update_or_delete_student">Actualizar o Eliminar un Estudiante</string>
    <string name="student_data_dos">Datos del estudiante</string>
    <string name="student_score_title">Actualizar Nota del Estudiante</string>
</resources>