<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvGradeSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_subject"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_score"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"/>
</LinearLayout>

