<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tvSelectOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/select_an_option"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRegisterStudent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register_student"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>


    <TextView
        android:id="@+id/tvRegisterStudentScore"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register_student_score"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tvRegisteredStudents"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/registered_students"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tvDeleteAndUpdateStudent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/delete_and_update_student"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tvDeleteAndUpdateScore"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/delete_and_update_score"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/log_out"
        android:textSize="18sp" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>